# codewars

./: .gitignore
C/Binaries/: CMakeLists.txt  Kata_Id.txt
C/Binaries/source/: CMakeLists.txt  cipher.c  cipher.h  main.c
C/IsMyFriendCheating/: CMakeLists.txt  Kata_Id.txt
C/IsMyFriendCheating/source/: CMakeLists.txt  main.c  pair.c  pair.h  remove_n.c  remove_n.h
C/ParseIntReloaded/: CMakeLists.txt  Kata_Id.txt
C/ParseIntReloaded/source/: CMakeLists.txt  main.c  parse.c  parse.h
cpp/MenuItems/: MenuItems.c  MenuItems.sln  MenuItems.vcxproj  MenuItems.vcxproj.filters
cpp/TwoToOneUnitTests/: TwoToOneUnitTests.cpp  TwoToOneUnitTests.vcxproj
cpp/TwotoOne/: TwotoOne.sln  TwotoOne.vcxproj  TwotoOne.vcxproj.filters
cpp/TwotoOne/Header/: TwoToOne.h
cpp/TwotoOne/Source/: TwoToOne.cpp
cpp/TwotoOne/TwoToOneUnitTests/: TwoToOneUnitTests.cpp  TwoToOneUnitTests.vcxproj.filters
isomorphism/: Cargo.toml
isomorphism/src/: .isomorphism.rs.swp  isomorphism.rs  lib.rs
paintfuck/: Cargo.toml
paintfuck/src/: lib.rs  paintfuck.rs
roboscript_1/src/: lib.rs  roboscript.rs
rust/chess_fun1_board_cell_color/: Cargo.toml
rust/int_rec1_sum_of_squared_divisors/: Cargo.toml
rust/integers_rec1_sumOfSquaredDivisors/: Cargo.toml
rust/map_sort_by_state/: Cargo.toml
rust/map_sort_by_state/src/: bystate.rs  (+1 more)
rust/minibitmove/: Cargo.toml
rust/mol2atoms/: Cargo.toml
rust/mul_3_or_5/: Cargo.toml
rust/roboscript_1/: Cargo.toml
rust/three_dimensional_vectors/: Cargo.toml
rust/trafficlight/: Cargo.toml
rust/valid_braces/: Cargo.toml
trafficlight/src/: lib.rs
(+16 files in other folders)
